[gd_scene load_steps=32 format=3 uid="uid://b0a2lb2qrnaq6"]

[ext_resource type="Script" path="res://goldeen.gd" id="1_ia022"]
[ext_resource type="Texture2D" uid="uid://gmuasefy7ag8" path="res://sprites/effects/sma4_sprites copy 3.png" id="4_mocvv"]
[ext_resource type="Texture2D" uid="uid://c8k1d5cwleip0" path="res://sprites/mobs/goldeen/DS DSi - Pokemon Black White - 118 Goldeen male (1).png" id="4_skf0h"]
[ext_resource type="Texture2D" uid="uid://ua6r8137q4hs" path="res://sprites/player/all anims/death/New Piskel.png" id="5_0gb5y"]

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_r66ng"]
resource_local_to_scene = true
length = 12.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_jtfm3"]
resource_local_to_scene = true
length = 15.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_j0f31"]
resource_local_to_scene = true
length = 7.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_vhshk"]
resource_local_to_scene = true
length = 15.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gi37v"]
atlas = ExtResource("5_0gb5y")
region = Rect2(0, 0, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_raudr"]
atlas = ExtResource("5_0gb5y")
region = Rect2(42, 0, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg0j0"]
atlas = ExtResource("5_0gb5y")
region = Rect2(0, 31, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4sx"]
atlas = ExtResource("5_0gb5y")
region = Rect2(42, 31, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7mik"]
atlas = ExtResource("4_skf0h")
region = Rect2(0, 0, 69, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_odi51"]
atlas = ExtResource("4_skf0h")
region = Rect2(69, 0, 69, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mv0r"]
atlas = ExtResource("4_skf0h")
region = Rect2(0, 39, 69, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdybu"]
atlas = ExtResource("4_skf0h")
region = Rect2(69, 39, 69, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7vm0"]
atlas = ExtResource("4_skf0h")
region = Rect2(0, 78, 69, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_17nkg"]
atlas = ExtResource("4_skf0h")
region = Rect2(69, 78, 69, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_gssxi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_mocvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi37v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raudr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg0j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4sx")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7mik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odi51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mv0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdybu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7vm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17nkg")
}],
"loop": true,
"name": &"GoldeenSwim",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u78p7"]
resource_local_to_scene = true
size = Vector2(54, 17.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xq3rg"]
size = Vector2(386.25, 276)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ir7d"]
resource_local_to_scene = true
size = Vector2(51, 23)

[sub_resource type="AnimationRootNode" id="AnimationRootNode_pcrla"]

[sub_resource type="Animation" id="Animation_lchpc"]
resource_name = "Death"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_k68qx"]
resource_name = "Fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Fall"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_n4g5v"]
resource_name = "Ground"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Ground"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_oghlg"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_fxs5t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.847)]
}

[sub_resource type="Animation" id="Animation_c58x4"]
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"GoldeenSwim"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_lojcx"]
resource_name = "Walk"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"CharmanderWalk"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oq100"]
_data = {
"Death": SubResource("Animation_lchpc"),
"Fall": SubResource("Animation_k68qx"),
"Ground": SubResource("Animation_n4g5v"),
"Jump": SubResource("Animation_oghlg"),
"RESET": SubResource("Animation_fxs5t"),
"Swim": SubResource("Animation_c58x4"),
"Walk": SubResource("Animation_lojcx")
}

[node name="Goldeen" type="CharacterBody2D"]
script = ExtResource("1_ia022")

[node name="CollisionDown" type="CollisionShape2D" parent="."]
shape = SubResource("SeparationRayShape2D_r66ng")

[node name="CollisionLeft" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("SeparationRayShape2D_jtfm3")

[node name="CollisionTop" type="CollisionShape2D" parent="."]
rotation = 3.14159
shape = SubResource("SeparationRayShape2D_j0f31")

[node name="CollisionRight" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource("SeparationRayShape2D_vhshk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -1)
scale = Vector2(1, 0.847)
sprite_frames = SubResource("SpriteFrames_gssxi")
animation = &"Death"
frame = 1

[node name="LeafDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeafDetection"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_u78p7")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(2.08165e-12, 2)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_xq3rg")

[node name="PlayerHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(4, 1)
shape = SubResource("RectangleShape2D_4ir7d")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_pcrla")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oq100")
}

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[node name="BubbleTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="LeafDetection" to="." method="_on_leaf_detection_body_entered"]
[connection signal="body_exited" from="LeafDetection" to="." method="_on_leaf_detection_body_exited"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
